--- a/src/app/components/main/list-friends/list-friends.component.html
+++ b/src/app/components/main/list-friends/list-friends.component.html
@@ -2,3 +2,8 @@
     <input type="text" class="search-input" placeholder="Type some friends name">
     <button class="search-button"><span class="material-symbols-outlined">search</span></button>
 </section>
+<section class="container-flex friends-list">
+    <div *ngFor="let person of listPersons">
+        <app-person-list-item [person]="person"></app-person-list-item>
+    </div>
+</section>
