Página de login de usuários

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
         <div class="welcome">Hello, {{user.name}}!</div>
     </section>
     <section class="container-flex container-header secondary-header">
-        <a class="header-link" routerLink="/my-friends">friends</a>
-        <a class="header-link" routerLink="/my-feed">feed</a>
+        <a class="header-link" routerLink="/social/my-friends">friends</a>
+        <a class="header-link" routerLink="/social/my-feed">feed</a>
     </section>
 </header>
