--- a/src/app/components/pages/login/login.component.css
+++ b/src/app/components/pages/login/login.component.css
@@ -1,5 +1,5 @@
 .login-page {
-    background-color: var(--background-alternative);
+    background-color: var(--background-secondary);
     height: 100vh;
 }
 
