Telas de Login e Cadastro de usuários

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,9 +32,24 @@
     font-family: 'Fugaz One', cursive;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .button {
     width: 8em;
     padding: 0.2em 0;
+}
+
+.register-button {
+    background-color: var(--button-confirm);
+    color: var(--background-primary);
+}
+
+.register-button:active {
+    border: 2px solid var(--button-confirm);
+    background-color: var(--background-primary);
+    color: var(--button-confirm)
 }
 
 .input-default {
@@ -50,3 +65,53 @@
     -moz-box-shadow: 2px 5px 10px 0px rgba(66,75,84,0.65);
     box-shadow: 2px 5px 10px 0px rgba(66,75,84,0.65);
 }
+
+.simple-page {
+    background-color: var(--background-secondary);
+    height: 100vh;
+}
+
+.simple-page-container {
+    padding: 2em 4em;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    background-color: var(--background-primary);
+    margin: 4em 0;
+    box-sizing: border-box;
+}
+
+.pink-border {
+    border: 2px solid var(--font-secondary);
+}
+
+.dark-bkg {
+    background-color: var(--background-primary);
+    color: var(--font-secondary);
+}
+
+.field-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    color: var(--font-secondary);
+}
+
+.title {
+    color: var(--font-secondary);
+    margin-bottom: 1em;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.input-file {
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+} 
