--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,17 +1,19 @@
-<section class="container-flex justify-center login-page">
-    <div class="login-container borderless-radius">
-        <h1 class="ff-fugaz">Social Media Demo</h1>
+<section class="container-flex justify-center simple-page">
+    <div class="simple-page-container borderless-radius">
+        <h1 class="title ff-fugaz">Social Media Demo</h1>
         <div class="field-container">
             <span class="material-symbols-outlined">account_circle</span>
             <input class="input-default pink-border dark-bkg" type="text" 
-                name="username" [(ngModel)]="login.username">
+                name="username" [(ngModel)]="login.username"
+                placeholder="Usuário">
         </div>
         <div class="field-container">
             <span class="material-symbols-outlined">lock</span>
             <input class="input-default pink-border dark-bkg" type="password" 
-                name="password" [(ngModel)]="login.password">
+                name="password" [(ngModel)]="login.password"
+                placeholder="Senha">
         </div>
         <button class="button login-button ff-fugaz borderless-radius" (click)="doLogin()">Entrar</button>
-        <button class="button register-button ff-fugaz borderless-radius">Cadastrar-se</button>
+        <button class="button register-button ff-fugaz borderless-radius" (click)="register()">Cadastrar-se</button>
     </div>
 </section>
