Adicionando cadastro de usuário

--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -7,6 +7,11 @@
                 name="name" placeholder="Digite seu nome" [(ngModel)]="user.name">
         </div>
         <div class="field-container">
+            <span class="material-symbols-outlined">person</span>
+            <input class="input-default pink-border dark-bkg" type="text" 
+                name="name" placeholder="Digite seu usuário" [(ngModel)]="user.username">
+        </div>
+        <div class="field-container">
             <span class="material-symbols-outlined">passkey</span>
             <input class="input-default pink-border dark-bkg" type="password" 
                 name="password" placeholder="Digite uma senha" [(ngModel)]="register.password">
