--- a/src/app/components/main/person-list-item/person-list-item.component.html
+++ b/src/app/components/main/person-list-item/person-list-item.component.html
@@ -1,4 +1,4 @@
 <div class="container-flex friend-item">
-    <img class="friend-profile-photo" src="../../../../assets/images/profiles/{{user.photo}}" alt="">
+    <img class="friend-profile-photo" src="{{user.photo}}" alt="">
     <p>{{user.name}}</p>
 </div>
