--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,19 +1,21 @@
 <section class="container-flex justify-center simple-page">
-    <div class="simple-page-container borderless-radius">
-        <h1 class="title ff-fugaz">Social Media Demo</h1>
-        <div class="field-container">
-            <span class="material-symbols-outlined">account_circle</span>
-            <input class="input-default pink-border dark-bkg" type="text" 
-                name="username" [(ngModel)]="login.username"
-                placeholder="Usuário">
+    <div class="modal-space">
+        <h1 class="modal-form-title ff-fugaz">Login</h1>
+        <div class="modal-form borderless-radius">
+            <div class="modal-form-field-wrapper">
+                <span class="label-symbol material-symbols-outlined">face</span>
+                <input class="input-default pink-border dark-bkg" type="text" 
+                    name="username" placeholder="Usuário" [(ngModel)]="login.username">
+            </div>
+            <div class="modal-form-field-wrapper">
+                <span class="label-symbol material-symbols-outlined">lock</span>
+                <input class="input-default pink-border dark-bkg" type="text" 
+                    name="password" placeholder="Senha" [(ngModel)]="login.password">
+            </div>
+            <div class="modal-form-button-wrapper">
+                <button class="button register-button ff-fugaz borderless-radius" (click)="register()">Cadastrar-se</button>
+                <button class="button login-button ff-fugaz borderless-radius" (click)="doLogin()">Entrar</button>
+            </div>
         </div>
-        <div class="field-container">
-            <span class="material-symbols-outlined">lock</span>
-            <input class="input-default pink-border dark-bkg" type="password" 
-                name="password" [(ngModel)]="login.password"
-                placeholder="Senha">
-        </div>
-        <button class="button login-button ff-fugaz borderless-radius" (click)="doLogin()">Entrar</button>
-        <button class="button register-button ff-fugaz borderless-radius" (click)="register()">Cadastrar-se</button>
     </div>
 </section>
