Criptografia de dados para envio do login

--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-form-field-wrapper">
                 <span class="label-symbol material-symbols-outlined">lock</span>
-                <input class="input-default pink-border dark-bkg" type="text" 
+                <input class="input-default pink-border dark-bkg" type="password" 
                     name="password" placeholder="Senha" [(ngModel)]="login.password">
             </div>
             <div class="modal-form-button-wrapper">
